# Talk_Law_Brazil_Open_Source

./: .gitignore  README.md  main.py  openapi.yaml  pl2384_23(03_07_23).csv  pl2720_23(14_06_23).csv  pl490_07(30_05_23).csv  plp93_23(30_05_23).csv  pyproject.toml  requirements.txt
.well-known/: ai-plugin.json
