[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.0"
pandas = "^2.0.3"
PyPDF2 = "^3.0.1"
quart = "^0.18.4"
quart-cors = "^0.6.0"
tiktoken = "^0.4.0"
openai = "^0.27.8"
matplotlib = "3.7.2"
plotly = "5.16.1"
scipy = "1.11.2"
sklearn3 = "0.0.1"
scikit-learn = "1.3.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"
poetry = {url="https://storage.googleapis.com/poetry-bundles/poetry-1.1.15-py2.py3-none-any.whl"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"